<resources>
    <string name="app_name">Editor++</string>
    <string name="action_settings">Settings</string>
    <string name="new_file">New File</string>
    <string name="title_activity_file_browser" translatable="false">FileBrowserActivity</string>
    <string name="file_name">File name:</string>
    <string name="file_already_exists">File already exists</string>
    <string name="overwrite_file">Do you wish to overwrite this file?</string>
    <string name="overwrite">Overwrite</string>
    <string name="cancel">Cancel</string>
    <string name="save_file">Save file</string>
    <string name="file_not_writable">File is not writable</string>
    <string name="save_success">File saved successly</string>
    <string name="could_not_save">Could not save</string>
    <string name="unkown_error">Unknown error</string>
    <string name="io_error">IO error. Possibly insufficient permissions to read/write file</string>
    <string name="choose_another_location">Please choose another location</string>
    <string name="saved">Saved</string>
    <string name="file_unsaved">File contains unsaved changes</string>
    <string name="file_unsaved_are_u_sure">Do you want to save unsaved changes? <b>Any unsaved data WILL BE LOST!</b></string>
    <string name="save">Save</string>
    <string name="dont_save">Don\'t save</string>
    <string name="file_not_readable">Couldn\'t open this file</string>
    <string name="open_file">Open file…</string>
    <string name="saving">Saving…</string>
    <string name="not_found_error">Target file not found or not enough rights to access this file (check app\'s permissions)</string>
    <string name="loading">Loading, please wait…</string>
    <string name="file_dont_exist">File doesn\'t exist</string>
    <string name="choose_another_file">Please choose another file</string>
    <string name="could_not_open">Could not open</string>
    <string name="could_not_open_dir">Could not open this directory</string>
    <string name="could_not_open_permission_denied_dir">Looks like your device has restriction to access this directory.</string>
    <string name="older_files">Older files</string>
    <string name="last_year">Last year</string>
    <string name="last_month">Last month</string>
    <string name="last_week">Last week</string>
    <string name="today">Today</string>
    <string name="recently">Recently</string>
    <string name="yesterday">Yesterday</string>
    <string name="type_filename">Please type filename you want to open/save in text field below the \"File name\" label.</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="appearance_header">Themes &amp; appearance</string>
    <string name="editor_header">Editor</string>

    <string name="tbeme_default_editor">Default theme</string>
    <string name="eclipse" translatable="false">Eclipse</string>
    <string name="tools_header">Tools</string>
    <string name="action_about">About</string>
    <string name="none">None</string>
    <string name="about">Text editor with code syntax highlighting. Coded by Alex2772 aka Alexey Titov, https://alex2772.ru. This application uses JetBrains Mono as the default font. More info at https://www.jetbrains.com/lp/mono/.</string>
    <string name="about_version">Version %1$s</string>


    <string name="file_too_big">File\'s too big</string>
    <string name="file_too_big_desc">"File has exceed file size restriction.  Continue         opening the <b>%1$s</b> file?     "</string>
    <string name="ignore_and_open">Continue opening</string>
    <string name="set_syntax">Set syntax</string>
    <string name="file">File</string>
    <string name="exit">Exit</string>
    <string name="file_too_big_anr_warning">To prevent app crash we will display only the first 32kb of the file. Save and edit operations are not available.</string>
    <string name="ok">OK</string>
    <string name="save_is_not_available">Save is not available</string>
    <string name="source_code">Source code</string>
    <string name="recent_files_list_is_empty">Recent files list is empty</string>
    <string name="android_permission_manager">Insufficient permissions</string>
    <string name="android_permission_manager_desc">You have disallowed this app to access filesystem. Without this permission you would not save files using this app.\nAre you sure you want to deny this permission?</string>
    <string name="try_again">Try again</string>
    <string name="im_sure">I\'m sure</string>
    <string name="check_apps_permissions">Check app\'s permissions</string>
    <string name="new_">New</string>
    <string name="open">Open...</string>
    <string name="save_as">Save as...</string>
    <string name="find_replace">Find/replace...</string>
    <string name="search_wrapped">Search wrapped</string>
    <string name="invalid_escaped_string_last_slash">Invalid escaped string: last slash</string>
    <string name="invalid_escaped_string_invalid_char">Invalid escaping char: %c</string>
    <string name="too_many_occurrences_first_1000">Too many occurrences, displaying first 1000</string>
    <string name="text_to_find">Text to find:</string>
    <string name="search_mode">Search mode:</string>
    <string name="count">Count</string>
    <string name="normal">Normal</string>
    <string name="regex">Regex</string>
    <string name="special_symbols">Special symbols (\\t, \\n, etc...)</string>
    <string name="wrap_around">Wrap around</string>
    <string name="match_case">Match case</string>
    <string name="font">Font</string>
    <string name="family">Family</string>
    <string name="size">Size</string>
    <string name="example">Example</string>
    <string name="editor_does_word_wrapping">Editor does word wrapping</string>
    <string name="editor_allows_move_left_right">Editor allows move left and right</string>
    <string name="horizontal_scrolling">Horizontal scrolling</string>
    <string name="editor_doesnt_show_line_numbers">Editor doesn\'t show line numbers</string>
    <string name="editor_shows_line_numbers">Editor shows line numbers</string>
    <string name="line_numbers">Line numbers</string>
    <string name="editor_will_not_open_files_4kb">Editor will not open files bigger than 4 KB</string>
    <string name="editor_will_always_open_big_files">Editor will always open big files</string>
    <string name="visually_separate_code_constructions">Visually separate code constructions according to syntax rules of current language</string>
    <string name="ignore_file_size">Ignore file size</string>
    <string name="syntax">Syntax</string>
    <string name="brackets">Brackets</string>
    <string name="define_brackets_pair">Define bracket\'s pair which cursor stays on</string>
    <string name="autocompletion">Autocompletion</string>
    <string name="append_opened_bracket">Append opened bracket with closing bracket</string>
    <string name="indent_code_blocks">Indent code blocks to make it more readable</string>
    <string name="brackets_pair">Bracket\'s pair</string>
    <string name="tabulation">Tabulation</string>
    <string name="tabulation_symbol">Tabulation symbol</string>
    <string name="tab_button">Tab button (TAB)</string>
    <string name="inserts_indentation">Inserts indentation</string>
    <string name="end_button">End button (END)</string>
    <string name="moves_cursor_end">Moves cursor to the end of line</string>
    <string name="trackpad">Trackpad</string>
    <string name="trackpad_like_controller">Trackpad-like cursor position controller</string>
    <string name="new_line">New line (NL)</string>
    <string name="leaves_current_line_makes_blank_line">Leaves the current line and makes next new blank line. Independent of cursor\'s horizontal position</string>
    <string name="common">Common</string>
    <string name="highlight">Highlight</string>
    <string name="bottom_panel">Bottom panel</string>
    <string name="theme">Theme</string>
    <plurals name="occurrence_count">
        <item quantity="zero">No occurrences</item>
        <item quantity="other">%d occurrences</item>
    </plurals>
</resources>
