<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/file">
        <menu>
            <item
                android:id="@+id/new_file"
                android:title="@string/new_" />
            <item
                android:id="@+id/open"
                android:title="@string/open" />
            <item
                android:id="@+id/save_dummy"
                android:title="@string/save" />
            <item
                android:id="@+id/save_as"
                android:title="@string/save_as" />
        </menu>
    </item>
    <item android:id="@+id/set_syntax" android:title="@string/set_syntax" >
        <menu />
    </item>
    <item android:id="@+id/find_replace" android:title="@string/find_replace"  />
    <item
        android:id="@+id/settings"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_about"
        android:title="@string/action_about" />
    <item android:title="@string/exit" />
</menu>