<!--
  ~ Copyright 2018 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="ru.alex2772.editorpp.activity.settings.AppearanceFragment"
        app:icon="@drawable/ic_format_paint_black_24dp"
        app:key="appearance_header"
        app:title="@string/appearance_header" />

    <Preference
        app:fragment="ru.alex2772.editorpp.activity.settings.EditorFragment"
        app:icon="@drawable/ic_edit_black_24dp"
        app:key="editor_header"
        app:title="@string/editor_header" />
    <Preference
        app:fragment="ru.alex2772.editorpp.activity.settings.ToolsFragment"
        app:icon="@drawable/ic_view_list_black_24dp"
        app:key="tools_header"
        app:title="@string/tools_header" />

</PreferenceScreen>
