<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/cardview_margin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_top_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_bottom_padding">

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cardview_top_padding"
                        android:gravity="bottom"
                        android:text="@string/font"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:text="@string/family"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginLeft="4dp"
                        android:text="@string/size"
                        app:layout_constraintStart_toStartOf="@id/spinner3"
                        app:layout_constraintTop_toBottomOf="@+id/textView4" />

                    <Spinner
                        android:id="@+id/spinner2"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="0dp"
                        android:layout_height="56dp"
                        app:layout_constraintEnd_toStartOf="@+id/spinner3"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView5" />

                    <Spinner
                        android:id="@+id/spinner3"
                        style="@style/Widget.AppCompat.Button"
                        android:layout_width="100dp"
                        android:layout_height="56dp"
                        app:layout_constraintBottom_toBottomOf="@+id/spinner2"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/spinner2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/cardview_margin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_top_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_bottom_padding">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cardview_top_padding"
                        android:gravity="bottom"
                        android:text="Theme"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/themes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView8" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/cardview_margin"
                android:layout_marginBottom="@dimen/cardview_margin">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/cardview_horizontal_padding"
                    android:paddingTop="@dimen/cardview_top_padding"
                    android:paddingRight="@dimen/cardview_horizontal_padding"
                    android:paddingBottom="@dimen/cardview_bottom_padding">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/cardview_top_padding"
                        android:gravity="bottom"
                        android:text="@string/example"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ru.alex2772.editorpp.view.HighlightEditText
                        android:id="@+id/highlightEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView9" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>